gccida/c1/merge_blocks_nomove
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/merge_blocks_nomove/src/cfgrtl.c:997:4: error: expected ';' after expression
rtx v9; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/merge_blocks_nomove/src/cfgrtl.c:997:5: error: use of undeclared identifier 'v9'
rtx v9; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/merge_blocks_nomove/src/cfgrtl.c:1034:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( i = ( __int64)v5[1]; *( _WORD *)i == 37; i = *( _QWORD *)( i + 16) ) 
                    ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/merge_blocks_nomove/src/cfgrtl.c:1038:12: error: expected ')'
if ( ( rtx)i == a->head ) 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/merge_blocks_nomove/src/cfgrtl.c:1038:4: note: to match this '('
if ( ( rtx)i == a->head ) 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/merge_blocks_nomove/src/cfgrtl.c:1041:1: error: use of undeclared identifier 'v9'
v9 = ( rtx)v5[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/merge_blocks_nomove/src/cfgrtl.c:1047:1: error: use of undeclared identifier 'v9'
v9 = a->end; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/merge_blocks_nomove/src/cfgrtl.c:1060:12: error: expected expression
*( _OWORD *)&b->pred = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/merge_blocks_nomove/src/cfgrtl.c:1060:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b->pred = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/merge_blocks_nomove/src/cfgrtl.c:1066:7: error: use of undeclared identifier 'v9'
end = v9; 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/merge_blocks_nomove/src/cfgrtl.c:1070:9: error: use of undeclared identifier 'v9'
for ( ; v9 != end; v9 = v9[1].fld[0].rtx ) 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/merge_blocks_nomove/src/cfgrtl.c:1070:20: error: use of undeclared identifier 'v9'
for ( ; v9 != end; v9 = v9[1].fld[0].rtx ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/merge_blocks_nomove/src/cfgrtl.c:1070:25: error: use of undeclared identifier 'v9'
for ( ; v9 != end; v9 = v9[1].fld[0].rtx ) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/merge_blocks_nomove/src/cfgrtl.c:1071:21: error: use of undeclared identifier 'v9'
set_block_for_insn( v9, a); 
                    ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/merge_blocks_nomove/src/obj/cfgrtl.o] Error 1
